5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1706_3055.log
== TEST (2019-04-29 18:06:44) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	gorgeta = valor*0.1
elif (valor > 100 and valor <=200):
	gorgeta = valor*0.09
elif (valor > 200 and valor <= 300):
	gorgeta = valor*0.08
elif (valor > 300):
	gorgeta = valor*0.07


-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:02) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor < 100):
	gorgeta = valor*0.1
elif (valor > 100 and valor <=200):
	gorgeta = valor*0.09
elif (valor > 200 and valor <= 300):
	gorgeta = valor*0.08
elif (valor > 300):
	gorgeta = valor*0.07


-- ERROR:
File "XXXX", line 3
    if (valor < 100):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:33) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	gorgeta = valor*0.1
elif (valor > 100 and valor <=200):
	gorgeta = valor*0.09
elif (valor > 200 and valor <= 300):
	gorgeta = valor*0.08
elif (valor > 300):
	gorgeta = valor*0.07


-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:34) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	gorgeta = valor*0.1
elif (valor > 100 and valor <=200):
	gorgeta = valor*0.09
elif (valor > 200 and valor <= 300):
	gorgeta = valor*0.08
elif (valor > 300):
	gorgeta = valor*0.07


-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:34) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	gorgeta = valor*0.1
elif (valor > 100 and valor <=200):
	gorgeta = valor*0.09
elif (valor > 200 and valor <= 300):
	gorgeta = valor*0.08
elif (valor > 300):
	gorgeta = valor*0.07


-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:12) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:14) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:16) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:21) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:22) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:22) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):

-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:46) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
				  
-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:08:57) 
-- CODE:
valor = float(input("Valor consumido: ")

if (valor <= 100):
	print("A")
-- ERROR:
File "XXXX", line 3
    if (valor <= 100):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:05) 
-- CODE:
valor = float(input("Valor consumido: "))

if (valor <= 100):
	print("A")
-- OUTPUT:
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:10:54) 
-- CODE:
valor = float(input("Valor consumido: "))

if (valor <= 100):
	g = valor*0.1
elif (valor > 100 and valor <= 200):
	g = valor*0.09
elif (valor > 200 and valor <=300):
	g = valor*0.08
elif (valor > 300):
	g = valor*0.07
	
vt = valor + g

print(round(vt,2))
-- OUTPUT:
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:11:02) 
-- CODE:
valor = float(input("Valor consumido: "))

if (valor <= 100):
	g = valor*0.1
elif (valor > 100 and valor <= 200):
	g = valor*0.09
elif (valor > 200 and valor <=300):
	g = valor*0.08
elif (valor > 300):
	g = valor*0.07
	
vt = valor + g

print(round(vt,2))
-- EXECUTION TIME:
0.151956
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
110.0
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
385.2
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
11.25
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
